update panigation
